@@ -9,7 +9,7 @@
     {
       "name": "RLGL_VERSION",
       "type": "STRING",
-      "value": "4.2",
+      "value": "4.5",
       "description": ""
     },
     {
